kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: waverse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
      - name: landing
        image: localhost:32000/waverse-landing:1.0.0
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
