kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: waverse
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: waver.se
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: landing
            port: 
              number: 80
